# Snake

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: application.c.9934C72590A3CD90.idx  application.h.FA2C6093EEF8F42C.idx  main.c.04065E142E99120F.idx  platform.c.EE89C3865F0A0474.idx  platform.h.56ED3FB8619FA4B2.idx  renderer.c.4AC91EBCF21E3578.idx  renderer.h.F7861A72666AAA93.idx
src/: main.c
src/core/: application.c  application.h
src/platform/: platform.c  platform.h
src/renderer/: renderer.c  renderer.h
